--- a/Server/RoutingServer/ConsoleApp_for_Self_Hosted_WS/MyRoutingServer.csproj
+++ b/Server/RoutingServer/ConsoleApp_for_Self_Hosted_WS/MyRoutingServer.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -58,6 +61,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OSMProcess.cs" />
+    <Compile Include="OSMCoordinate.cs" />
+    <Compile Include="OSMModel.cs" />
+    <Compile Include="OSMDataAPI.cs" />
     <Compile Include="IMyCalculatorService.cs" />
     <Compile Include="MyCalculatorService.cs" />
     <Compile Include="Program.cs" />
