[DEV] Process run #2

--- a/Server/RoutingServer/ConsoleApp_for_Self_Hosted_WS/VeloVert-RoutingServer.csproj
+++ b/Server/RoutingServer/ConsoleApp_for_Self_Hosted_WS/VeloVert-RoutingServer.csproj
@@ -89,6 +89,7 @@
     <Compile Include="OSMDataAPI.cs" />
     <Compile Include="IMyCalculatorService.cs" />
     <Compile Include="MyCalculatorService.cs" />
+    <Compile Include="ProcessOfObtainingTheSteps.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
