--- a/Server/WcfServiceLibrary1/WcfServiceLibrary1/WcfServiceLibrary1.csproj
+++ b/Server/WcfServiceLibrary1/WcfServiceLibrary1/WcfServiceLibrary1.csproj
@@ -35,9 +35,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.Services" />
@@ -45,15 +49,20 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="APIManager.cs" />
+    <Compile Include="DataClass.cs" />
+    <Compile Include="DirectionProcess.cs" />
+    <Compile Include="JCDecauxProcess.cs" />
+    <Compile Include="JCDevauxCoordinate.cs" />
     <Compile Include="navigationveloservice.cs" />
-    <Compile Include="IService1.cs" />
     <Compile Include="INavigationveloserviceSOAP.cs" />
+    <Compile Include="OSMCoordinate.cs" />
+    <Compile Include="OSMProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
