--- a/Server/WcfServiceLibrary1/WcfServiceLibrary1/App.config
+++ b/Server/WcfServiceLibrary1/WcfServiceLibrary1/App.config
@@ -38,7 +38,7 @@
 		<service name="WcfServiceLibrary1.navigationveloservice">
 			<host>
 				<baseAddresses>
-					<add baseAddress = "http://localhost/navigationveloservice/" />
+					<add baseAddress = "http://localhost:8733/navigationveloservice/" />
 				</baseAddresses>
 			</host>
 			<!-- Service Endpoints -->
