[DEV] Solution Proxy + ajout de reference du service proxy au routing serveur #6

--- a/Server/WcfServiceLibrary1/RoutingServer/App.config
+++ b/Server/WcfServiceLibrary1/RoutingServer/App.config
@@ -3,4 +3,20 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <wsHttpBinding>
+                <binding name="WSHttpBinding_IRequestProxy" />
+            </wsHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:8081/RequestProxy/" binding="wsHttpBinding"
+                bindingConfiguration="WSHttpBinding_IRequestProxy" contract="RequestProxy.IRequestProxy"
+                name="WSHttpBinding_IRequestProxy">
+                <identity>
+                    <userPrincipalName value="YVARS\Latitude 5580" />
+                </identity>
+            </endpoint>
+        </client>
+    </system.serviceModel>
 </configuration>
