[FIX] Augmentation de la limitation de la quantité de data dans .config de routing serveur #6

--- a/Server/WcfServiceLibrary1/RoutingServer/App.config
+++ b/Server/WcfServiceLibrary1/RoutingServer/App.config
@@ -6,7 +6,9 @@
     <system.serviceModel>
         <bindings>
             <wsHttpBinding>
-                <binding name="WSHttpBinding_IRequestProxy" />
+				<binding name="WSHttpBinding_IRequestProxy" maxReceivedMessageSize = "1000000">
+					<readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647"  maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+				</binding>
             </wsHttpBinding>
         </bindings>
         <client>
