--- a/Server/WcfServiceLibrary1/RoutingServer/App.config
+++ b/Server/WcfServiceLibrary1/RoutingServer/App.config
@@ -6,14 +6,15 @@
     <system.serviceModel>
         <bindings>
             <wsHttpBinding>
-				<binding name="WSHttpBinding_IRequestProxy" maxReceivedMessageSize = "1000000">
-					<readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647"  maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+				<binding name="WSHttpBinding_IRequestProxy" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
+					<readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647"
+					   maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
 				</binding>
             </wsHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8081/RequestProxy/" binding="wsHttpBinding"
-                bindingConfiguration="WSHttpBinding_IRequestProxy" contract="RequestProxy.IRequestProxy"
+                bindingConfiguration="WSHttpBinding_IRequestProxy" contract="MyProxy.IRequestProxy"
                 name="WSHttpBinding_IRequestProxy">
                 <identity>
                     <userPrincipalName value="YVARS\Latitude 5580" />
