--- a/Server/WcfServiceLibrary1/ActiveMQ/ActiveMQ.csproj
+++ b/Server/WcfServiceLibrary1/ActiveMQ/ActiveMQ.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{348EC303-33CF-48D6-B03D-6281690F7005}</ProjectGuid>
+    <ProjectGuid>{BCFAC3EE-DE29-4D40-9703-9295BA03AE0C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>RoutingServer</RootNamespace>
-    <AssemblyName>RoutingServer</AssemblyName>
+    <RootNamespace>ActiveMQ</RootNamespace>
+    <AssemblyName>ActiveMQ</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,9 +42,6 @@
     <Reference Include="ICSharpCode.SharpZipLib, Version=1.3.3.11, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpZipLib.1.3.3\lib\net45\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.13.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -53,11 +50,9 @@
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Channels" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -66,61 +61,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActiveMQ\ActiveMQ.cs" />
-    <Compile Include="ApiData\ApiData.cs" />
-    <Compile Include="ApiManager\APIManager.cs" />
-    <Compile Include="Connected Services\MyProxy\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
-    <Compile Include="DirectionProcess.cs" />
-    <Compile Include="INavigationveloserviceSOAP.cs" />
-    <Compile Include="JCDecaux\JCDecauxProcess.cs" />
-    <Compile Include="JCDecaux\JCDevauxCoordinate.cs" />
-    <Compile Include="NavigationveloserviceSOAP.cs" />
-    <Compile Include="OpenStreetMap\OSMCoordinate.cs" />
-    <Compile Include="OpenStreetMap\OSMProcess.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="ActiveMQ.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Connected Services\MyProxy\item.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\MyProxy\item1.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\MyProxy\item2.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\MyProxy\RequestProxy.wsdl" />
-    <None Include="Connected Services\MyProxy\RoutingServer.MyProxy.JCDecauxItem.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadataStorage Include="Connected Services\MyProxy\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\MyProxy\item.disco" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\MyProxy\configuration91.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\MyProxy\configuration.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\MyProxy\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
+    <ProjectReference Include="..\ApiData\ApiData.csproj">
+      <Project>{e3a4e9b9-e61a-4ee2-8e55-cba9274da815}</Project>
+      <Name>ApiData</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
