[FIX] we have a client git add .! #2

--- a/Server/RoutingServer/RoutingServer/App.config
+++ b/Server/RoutingServer/RoutingServer/App.config
@@ -1,9 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <system.serviceModel>
+
         <bindings>
             <wsHttpBinding>
 				<binding name="WSHttpBinding_IRequestProxy" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
